--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Seth Tettey Kofi Anum | WDD 130 </title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Seth Tettey Kofi Anum | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Hi, am Seth Tettey Kofi Anum" width="200">
+        <p>Hello! My name is Seth Tettey Kofi Anum, am from Ghana greater Accra.
+            Am into education yet love to explore this new career field of this course.
+            wed development.</p>
+    </main>
+    <footer>
+        <p>© 2026 🎄Seth Teetey Kofi Anum 🎄 Accra Ghana</p>
+    </footer>
 </body>
+
 </html>
