--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML Structure</title>
+    <meta name="desription" content="A basic HTML structure example using semantic HTML element">
+    <meta name="author" content="Seth Tettey Kofi Anum">
 </head>
+
 <body>
-    
+    <header>
+        <img src="images/basic-logo.png" alt="HTML Layout logo" width="128" height="128">
+    </header>
+    <nav>
+        <ul>
+            <li><a href="https://byui.edu">BYU-Idaho</a></li>
+            <li><a href="https://churchofjesuschrist.org">The Church</a></li>
+        </ul>
+    </nav>
+    <main>
+        <hi>Basic HTML Structure</hi>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi, maxime!</p>
+        </section>
+    </main>
+    <aside>
+        <img
+          src="https://content.churchofjesuschrist.org/templesidsorg/bc/temples/photo-galleries/payson-utah/800*500/payson-utah-temple-celestial-room-1458545.jpg"
+          alt="Payson Utah Temple Celestial Room" width="200">
+    </aside>
+    <footer>
+        <p> 🎄 SETH TETTEY KOFI ANUM 🎄 </p>
+    </footer>
 </body>
+
 </html>
