--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seth Tettey Kofi Anum | WDD 130 </title>
+    <meta name="description"
+      content="Seth is my name and this is my site. A site to study more about web development. This site is dedicated to help learners to acquire grate skills in web development">
+    <meta name="author" content="Seth Tettey Kofi Anum">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -16,14 +19,22 @@
         </nav>
     </header>
     <main>
+
         <h1>Seth Tettey Kofi Anum | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hi, am Seth Tettey Kofi Anum" width="200">
         <p>Hello! My name is Seth Tettey Kofi Anum, am from Ghana greater Accra.
             Am into education yet love to explore this new career field of this course.
             wed development.</p>
     </main>
+    <aside>
+        <h2>Ghana (Accra)</h2>
+        <img src="images/Accra scene.jpg" alt="Accra night scene">
+        <P>A night scene of Grater Accra. This is the city known as, Home away from home. Not only
+            that, however it is the home for Ghana's big University "East Lagon". The University
+            that makes Ghana proud, where grate things can be accomplished. </P>
+    </aside>
     <footer>
-        <p>© 2026 🎄Seth Teetey Kofi Anum 🎄 Accra Ghana</p>
+        <p>© 2026 🎄Seth Tettey Kofi Anum 🎄 Accra Ghana</p>
     </footer>
 </body>
 
