--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seth Tettey Kofi Anum | WDD 130 </title>
     <meta name="description"
-      content="Seth is my name and this is my site. A site to study more about web development. This site is dedicated to help learners to acquire grate skills in web development">
+      content="Seth is my name and this is my site. This site is dedicated to help learners to acquire grate skills in web development">
     <meta name="author" content="Seth Tettey Kofi Anum">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
@@ -28,10 +28,10 @@
     </main>
     <aside>
         <h2>Ghana (Accra)</h2>
-        <img src="images/Accra scene.jpg" alt="Accra night scene">
-        <P>A night scene of Grater Accra. This is the city known as, Home away from home. Not only
+        <img src="images/accra-scene.jpg" alt="Accra night scene">
+        <p>A night scene of Grater Accra. This is the city known as, Home away from home. Not only
             that, however it is the home for Ghana's big University "East Lagon". The University
-            that makes Ghana proud, where grate things can be accomplished. </P>
+            that makes Ghana proud, where grate things can be accomplished. </p>
     </aside>
     <footer>
         <p>© 2026 🎄Seth Tettey Kofi Anum 🎄 Accra Ghana</p>
