--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </main>
     <aside>
         <h2>Ghana (Accra)</h2>
-        <img src="images/accra-scene.jpg" alt="Accra night scene">
+        <img src="images/accrascene.jpg" alt="Accra night scene">
         <p>A night scene of Grater Accra. This is the city known as, Home away from home. Not only
             that, however it is the home for Ghana's big University "East Lagon". The University
             that makes Ghana proud, where grate things can be accomplished. </p>
