--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <meta name="description" content="Learn more about our company, mission, and values">
+    <meta name="description"
+      content="Learn more about our company, mission, and values. Where raft touring is exciting and full of fun.">
     <meta name="author" content="Seth Tettey Kofi Anum">
+    <img src="images/raft.jpg" alt="Hello, Am Seth Tettey Kofi Anum" width="100" length="100">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
@@ -23,10 +25,11 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/raft.jpg" alt="Hello, Am Seth Tettey Kofi Anum" width="200">
+            <img src="images/happy.jpg" alt="Hello, Am Seth Tettey Kofi Anum" width="200"
+              length="200">
             <h1>Ghana River Touring Association</h1>
             <articles>
-                <img src="images/happy.jpg" alt="Happy touring around water">
+                <img src="images/joy.jpg" alt="Happy touring around water">
                 <p>Ghana River Touring Association. An established company that has been offering
                     guided whitewater rafting trips in Western Africa since 1990. Main purpose is
                     to make you happy as you adventure around to release stress. And know this,
@@ -43,7 +46,8 @@
             <h2>Adventure Awaits You!</h2>
         </section>
     </main>
-    <footer>© 2026... Ghana River Touring Association. 🎄Seth Tettey Kofi Anum 🎄 Accra Ghana
+    <footer>
+        <p>© 2026... Ghana River Touring Association. 🎄Seth Tettey Kofi Anum 🎄 Accra Ghana</p>
         <nav class="socialmedia">
             <a href="https://faceboo.com">
                 <img src="images/facebook.jpg" alt="Facebook Icon">
