--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description"
       content="Seth is my name and this is my site. This site is dedicated to help learners to acquire grate skills in web development">
     <meta name="author" content="Seth Tettey Kofi Anum">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/stylesheet.css">
 </head>
 
 <body>
@@ -16,23 +16,31 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="#">Facebook</a>
+            <a href="#">LinkedIn</a>
         </nav>
     </header>
-    <main>
+    <div class="grid">
+        <aside>
 
-        <h1>Seth Tettey Kofi Anum | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Hi, am Seth Tettey Kofi Anum" width="200">
-        <p>Hello! My name is Seth Tettey Kofi Anum, am from Ghana greater Accra.
-            Am into education yet love to explore this new career field of this course.
-            wed development.</p>
+            <h1>Seth Tettey Kofi Anum | WDD 130</h1>
+            <img src="images/profile.jpg" alt="Hi, am Seth Tettey Kofi Anum" width="200">
+            <p>Hello! My name is Seth Tettey Kofi Anum, am from Ghana greater Accra.
+                Am into education yet love to explore this new career field of this course.
+                wed development.</p>
+        </aside>
+
+    </div>
+    <div class="grid">
+        <main>
+            <h2>Ghana (Accra)</h2>
+            <img src="images/accra-scene.jpg" alt="Accra night scene" height="400">
+            <p>A night scene of Grater Accra. This is the city known as, Home away from home. Not
+                only
+                that, however it is the home for Ghana's big University "East Lagon". The University
+                that makes Ghana proud, where grate things can be accomplished. </p>
+    </div>
     </main>
-    <aside>
-        <h2>Ghana (Accra)</h2>
-        <img src="images/accra-scene.jpg" alt="Accra night scene">
-        <p>A night scene of Grater Accra. This is the city known as, Home away from home. Not only
-            that, however it is the home for Ghana's big University "East Lagon". The University
-            that makes Ghana proud, where grate things can be accomplished. </p>
-    </aside>
     <footer>
         <p>© 2026 🎄Seth Tettey Kofi Anum 🎄 Accra Ghana</p>
     </footer>
