--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,61 +4,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
     <meta name="description"
-      content="Learn more about our company, mission, and values. Where raft touring is exciting and full of fun.">
+      content="Discover Rafting Adventures - our mission, history, and passion for thrilling white water rafting experiences.">
     <meta name="author" content="Seth Tettey Kofi Anum">
-    <img src="images/raft.jpg" alt="Hello, Am Seth Tettey Kofi Anum" width="100" length="100">
+    <title>Rafting Adventures | About Us</title>
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="trips.html">Trips</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-        </nav>
+    <header> <img src="images/raft.jpg" width="100" alt="Rafting Adventures Logo">
+        <nav> <a href="index.html">Home</a> <a href="about.html">About Us</a> <a
+              href="trips.html">Trips</a> <a href="contact.html">Contact</a> </nav>
     </header>
     <main>
-        <div class="hero">
-            <img src="images/happy.jpg" alt="Hello, Am Seth Tettey Kofi Anum" width="200"
-              length="200">
-            <h1>Ghana River Touring Association</h1>
-            <articles>
-                <img src="images/joy.jpg" alt="Happy touring around water">
-                <p>Ghana River Touring Association. An established company that has been offering
-                    guided whitewater rafting trips in Western Africa since 1990. Main purpose is
-                    to make you happy as you adventure around to release stress. And know this,
-                    without water there is no life.
+        <div class="hero"> <img src="images/joy.jpg" alt="Rafting Adventure Hero Image">
+            <h1>Rafting Adventures</h1>
+            <article> <img src="images/happy.jpg" alt="Happy Client">
+                <p> Our mission is to bring the thrill of white water rafting to adventurers of all
+                    ages. We believe in fun, safety, and unforgettable experiences on the river.
                 </p>
-            </articles>
+            </article>
         </div>
         <section>
             <h2>History</h2>
-            <p>Ghana River Touring Association. An established company that has been offering
-                guided whitewater rafting trips in Western Africa since 1990.</p>
+            <p> Rafting Adventures began with a small group of river enthusiasts who wanted to share
+                their love of the outdoors. Over the years, we’ve grown into a trusted company
+                offering trips for families, thrill-seekers, and explorers alike. </p>
         </section>
         <section>
-            <h2>Adventure Awaits You!</h2>
+            <h2>Adventure Awaits You!</h2> <!-- Images will be added in the next assignment -->
         </section>
     </main>
     <footer>
-        <p>© 2026... Ghana River Touring Association. 🎄Seth Tettey Kofi Anum 🎄 Accra Ghana</p>
-        <nav class="socialmedia">
-            <a href="https://faceboo.com">
-                <img src="images/facebook.jpg" alt="Facebook Icon">
-            </a>
-            <a href="https://linkedin.com">
-                <img src="images/linkedin.jpg" alt="LinkedIn Icon">
-            </a>
-            <a href="https://instagram.com">
-                <img src="images/instagram.jpg" alt="Instagram Icon">
-            </a>
-        </nav>
+        <p>&copy; 2026 Rafting Adventures | Seth Tettey Kofi Anum</p>
+        <nav class="socialmedia"> <a href="https://facebook.com"><img src="images/facebook.jpg"
+                  alt="Facebook"></a> <a href="https://linkedin.com"><img src="images/linkedin.jpg"
+                  alt="Twitter"></a> <a href="https://instagram.com"><img src="images/instagram.jpg"
+                  alt="Instagram"></a> </nav>
     </footer>
 </body>
 
