seth.pj complete rafting

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,9 +12,16 @@
 </head>
 
 <body>
-    <header> <img src="images/raft.jpg" width="100" alt="Rafting Adventures Logo">
-        <nav> <a href="index.html">Home</a> <a href="about.html">About Us</a> <a
-              href="trips.html">Trips</a> <a href="contact.html">Contact</a> </nav>
+    <header>
+        <img src="images/raft.jpg" width="100" alt="Rafting Adventures Logo">
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="trips.html">Trips</a></li>
+                <li><a href="contact.html">Contact</a></li>
+        </nav>
+        </ul>
     </header>
     <main>
         <div class="hero"> <img src="images/joy.jpg" alt="Rafting Adventure Hero Image">
@@ -25,22 +32,46 @@
                 </p>
             </article>
         </div>
-        <section>
-            <h2>History</h2>
-            <p> Rafting Adventures began with a small group of river enthusiasts who wanted to share
-                their love of the outdoors. Over the years, we’ve grown into a trusted company
-                offering trips for families, thrill-seekers, and explorers alike. </p>
+        <section class="history">
+            <h2>Our History</h2>
+            <div class="hisory-layout">
+                <p> Rafting Adventures began with a small group of river enthusiasts who wanted to
+                    share
+                    their love of the outdoors. Over the years, we’ve grown into a trusted company
+                    offering trips for families, thrill-seekers, and explorers alike. </p>
+                <img src="images/Rafting history image.jpg" alt="Rafting history image" width="250">
+            </div>
         </section>
-        <section>
-            <h2>Adventure Awaits You!</h2> <!-- Images will be added in the next assignment -->
+        <h2>Adventure Awaits You!</h2> <!-- Images will be added in the next assignment -->
+        <section class="adventures">
+            <h2>Adventures</h2>
+            <div class="adventure-gallery">
+                <figure>
+                    <img src="images/adventure1.jpg" alt="adventures of rafting">
+                    <figcaption>adventures of rafting</figcaption>
+                </figure>
+                <figure> <img src="images/adventure2.jpg" alt="Big Mallard">
+                    <figcaption>Big Mallard</figcaption>
+                </figure>
+                <figure> <img src="images/adventure3.jpg" alt="Half Day Adventure">
+                    <figcaption>Half Day Adventure</figcaption>
+                </figure>
+                <figure> <img src="images/adventure4.jpg" alt="The Great Wave">
+                    <figcaption>The Great Wave</figcaption>
+                </figure>
+                <figure> <img src="images/adventure5.jpg" alt="Sunset Rapids">
+                    <figcaption>Sunset Rapids</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
     <footer>
-        <p>&copy; 2026 Rafting Adventures | Seth Tettey Kofi Anum</p>
-        <nav class="socialmedia"> <a href="https://facebook.com"><img src="images/facebook.jpg"
-                  alt="Facebook"></a> <a href="https://linkedin.com"><img src="images/linkedin.jpg"
-                  alt="Twitter"></a> <a href="https://instagram.com"><img src="images/instagram.jpg"
-                  alt="Instagram"></a> </nav>
+        <p>&copy; 2026 White Water Rafting Adventures</p>
+        <div class="social">
+            <a href="#"><img src="images/facebook.jpg" alt="Facebook"></a>
+            <a href="#"><img src="images/linkedin.jpg" alt="linkedin"></a>
+            <a href="#"><img src="images/instagram.jpg" alt="Instagram"></a>
+        </div>
     </footer>
 </body>
 
