seth.pj complete raft

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -16,12 +16,12 @@
         <img src="images/raft.jpg" width="100" alt="Rafting Adventures Logo">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="trips.html">Trips</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <a href="index.html">Home</a>
+                <a href="about.html">About Us</a>
+                <a href="trips.html">Trips</a>
+                <a href="contact.html">Contact</a>
+            </ul>
         </nav>
-        </ul>
     </header>
     <main>
         <div class="hero"> <img src="images/joy.jpg" alt="Rafting Adventure Hero Image">
@@ -39,7 +39,7 @@
                     share
                     their love of the outdoors. Over the years, we’ve grown into a trusted company
                     offering trips for families, thrill-seekers, and explorers alike. </p>
-                <img src="images/Rafting history image.jpg" alt="Rafting history image" width="250">
+                <img src="images/rafting history image.jpg" alt="Rafting history image" width="250">
             </div>
         </section>
         <h2>Adventure Awaits You!</h2> <!-- Images will be added in the next assignment -->
@@ -67,11 +67,13 @@
     </main>
     <footer>
         <p>&copy; 2026 White Water Rafting Adventures</p>
-        <div class="social">
-            <a href="#"><img src="images/facebook.jpg" alt="Facebook"></a>
-            <a href="#"><img src="images/linkedin.jpg" alt="linkedin"></a>
-            <a href="#"><img src="images/instagram.jpg" alt="Instagram"></a>
-        </div>
+        <nav>
+            <div class="social">
+                <a href="#"><img src="images/facebook.jpg" alt="Facebook"></a>
+                <a href="#"><img src="images/linkedin.jpg" alt="linkedin"></a>
+                <a href="#"><img src="images/instagram.jpg" alt="Instagram"></a>
+            </div>
+        </nav>
     </footer>
 </body>
 
