--- a/wwr/about.html
+++ b/wwr/about.html
@@ -39,7 +39,8 @@
                     share
                     their love of the outdoors. Over the years, we’ve grown into a trusted company
                     offering trips for families, thrill-seekers, and explorers alike. </p>
-                <img src="images/rafting history image.jpg" alt="Rafting history image" width="250">
+                <img src="images/rafting history image.jpg" alt="Rafting history image" height="400"
+                  width="250">
             </div>
         </section>
         <h2>Adventure Awaits You!</h2> <!-- Images will be added in the next assignment -->
