raft-adventure.pj

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -26,7 +26,8 @@
     <main>
         <div class="hero"> <img src="images/joy.jpg" alt="Rafting Adventure Hero Image">
             <h1>Rafting Adventures</h1>
-            <article> <img src="images/happy.jpg" alt="Happy Client">
+            <article>
+                <img src="images/happy.jpg" alt="Happy Client">
                 <p> Our mission is to bring the thrill of white water rafting to adventurers of all
                     ages. We believe in fun, safety, and unforgettable experiences on the river.
                 </p>
@@ -37,7 +38,7 @@
             <div class="hisory-layout">
                 <p> Rafting Adventures began with a small group of river enthusiasts who wanted to
                     share
-                    their love of the outdoors. Over the years, we’ve grown into a trusted company
+                    their love of the outdoors. Over the years, we are grown into a trusted company
                     offering trips for families, thrill-seekers, and explorers alike. </p>
                 <img src="images/rafting history image.jpg" alt="Rafting history image" height="400"
                   width="250">
