--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -13,9 +13,9 @@
     </header>
     <main>
         <form>
-            <label for="fullname">Full Name:</label>
+            <label for="fullname">Full Name:</label><br>
             <input type="text" id="fullname" name="fullname" required> <br><br>
-            <label for="useremail">Email Address:</label>
+            <label for="useremail">Email Address:</label><br>
             <input type="email" id="useremail" name="useremail" required> <br><br>
             <label for="browser">What is your favorite browser?</label>
             <select name="browser" id="browser">
