raft-adventure.pj

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -42,15 +42,15 @@
             <br>
             <h2>We Are Here to Serve</h2>
             <figure>
-                <img src="images/employee1.jpg" alt="Seth - Lead Guide">
+                <img src="images/adventure1.jpg" alt="Seth - Lead Guide">
                 <figcaption>Seth T.k Anum, Lead Guide</figcaption>
             </figure>
             <figure>
-                <img src="images/employee2.jpg" alt="Myckell - Safety Coordinator">
+                <img src="images/adventure2.jpg" alt="Myckell - Safety Coordinator">
                 <figcaption>Myckell, Safety Coordinator</figcaption>
             </figure>
             <figure>
-                <img src="images/employee3.jpg" alt="Osei - Reservations Manager">
+                <img src="images/adventure3.jpg" alt="Osei - Reservations Manager">
                 <figcaption>Gifty Osei, Reservations Manager</figcaption>
             </figure>
         </section>
