--- a/index.html
+++ b/index.html
@@ -4,45 +4,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Seth Tettey Kofi Anum | WDD 130 </title>
+    <title>Rafting Adventures | Home</title>
     <meta name="description"
-      content="Seth is my name and this is my site. This site is dedicated to help learners to acquire grate skills in web development">
-    <meta name="author" content="Seth Tettey Kofi Anum">
-    <link rel="stylesheet" href="styles/stylesheet.css">
+      content="Discover thrilling white water rafting adventures. Join our newsletter, explore trips, and experience unforgettable journeys.">
+    <link rel="stylesheet" href="rafting.css">
 </head>
 
 <body>
     <header>
+        <h1>Rafting Adventures</h1>
         <nav>
-            <a href="#">Home</a>
-            <a href="wwr/">Rafting Website</a>
-            <a href="#">Facebook</a>
-            <a href="#">LinkedIn</a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="trips.html">Trips</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
         </nav>
     </header>
-    <div class="grid">
-        <aside>
 
-            <h1>Seth Tettey Kofi Anum | WDD 130</h1>
-            <img src="images/profile.jpg" alt="Hi, am Seth Tettey Kofi Anum" width="200">
-            <p>Hello! My name is Seth Tettey Kofi Anum, am from Ghana greater Accra.
-                Am into education yet love to explore this new career field of this course.
-                wed development.</p>
-        </aside>
+    <main>
+        <!-- Hero -->
+        <section class="hero">
+            <img src="images/river.jpg" width="200" alt="Rafting adventure on a river">
+            <h2 class="hero-text">Experience the Thrill of White Water Rafting</h2>
+        </section>
 
-    </div>
-    <div class="grid">
-        <main>
-            <h2>Ghana (Accra)</h2>
-            <img src="images/accra-scene.jpg" alt="Accra night scene" height="400">
-            <p>A night scene of Grater Accra. This is the city known as, Home away from home. Not
-                only
-                that, however it is the home for Ghana's big University "East Lagon". The University
-                that makes Ghana proud, where grate things can be accomplished. </p>
-    </div>
+        <!-- Newsletter -->
+        <section class="newsletter">
+            <h2>Join Our Adventure Newsletter</h2>
+            <form>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required><br>
+                <br>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required><br>
+                <br>
+                <button type="submit">Sign Up</button>
+            </form>
+        </section>
+
+        <!-- Call to Action -->
+        <section class="cta">
+            <p>Ready to plan your next adventure?</p>
+            <a href="trips.html" class="cta-button">View Trips</a>
+        </section>
+        <!-- Grid Showcase -->
+        <section class="grid-showcase">
+            <div>
+                <img src="images/adventure4.jpg" width="400" alt="Group rafting down rapids">
+                <h3>Unforgettable Experiences</h3>
+                <p>Our guided trips bring excitement and safety together.</p>
+            </div>
+            <div>
+                <img src="images/adventure.jpg" width="600" alt="Rafting team celebrating">
+                <h3>Team Adventure</h3>
+                <p>Build memories with friends, family, or coworkers.</p>
+            </div>
+        </section>
     </main>
+
     <footer>
-        <p>© 2026 🎄Seth Tettey Kofi Anum 🎄 Accra Ghana</p>
+        <p>&copy; 2026 Rafting Adventures | Designed by Seth</p>
     </footer>
 </body>
 
