--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,105 +3,113 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description"
+      content="Contact Rafting Adventures for reservations, inquiries, fun and touring or suggestions.">
+    <meta name="Seth Tettey Kofi Anum" content="Seth T.k Anum">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us | Rafting Adventures</title>
-    <meta name="description"
-      content="Contact Rafting Adventures for reservations, general inquiries, or website suggestions. Find our location, meet our team, and send us a message through our contact form.">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
-    <!-- Header -->
-    <header>
-        <div class="header-container">
-            <img src="images/raft.jpg" alt="Rafting Adventures Logo" class="logo">
+    <header class="site-header">
+        <div class="logo-nav">
+            <img src="images/raft.jpg" width="100" alt="Rafting Adventures Logo" class="logo">
             <nav>
-                <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="trips.html">Trips</a></li>
-                    <li><a href="contact.html" class="active">Contact Us</a></li>
-                </ul>
+                <a href="index.html">Home</a>
+                <a href="about.html">About Us</a>
+                <a href="trips.html">Trips</a>
+                <a href="contact.html">Contact Us</a>
             </nav>
         </div>
     </header>
 
-    <!-- Main Content -->
     <main>
-        <!-- Company Information -->
-        <section class="company-info">
-            <h2>Contact Information</h2>
-            <p>123 Tema River Road, Accra City</p>
-            <p>Phone: (233) 55-761-4507</p>
-            <p>Email: Tema@raftingadventures.com</p> <!-- Real Google Map Embed --> <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.123456789!2d-122.419415!3d37.774929!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085809c1234567%3A0xabcdef123456789!2sRapids%20City!5e0!3m2!1sen!2sus!4v1707600000000!5m2!1sen!2sus"
-              title="Rafting Adventures Location" loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"> </iframe>
-        </section> <!-- Employee Profiles -->
-        <section class="employees">
-            <br>
-            <h2>We Are Here to Serve</h2>
-            <figure>
-                <img src="images/adventure1.jpg" alt="Seth - Lead Guide">
-                <figcaption>Seth T.k Anum, Lead Guide</figcaption>
-            </figure>
-            <figure>
-                <img src="images/adventure2.jpg" alt="Myckell - Safety Coordinator">
-                <figcaption>Myckell, Safety Coordinator</figcaption>
-            </figure>
-            <figure>
-                <img src="images/adventure3.jpg" alt="Osei - Reservations Manager">
-                <figcaption>Gifty Osei, Reservations Manager</figcaption>
-            </figure>
+        <!-- Required H1 -->
+        <h1>Rafting Adventures – Contact Us</h1>
+
+        <!-- Contact Info + Form Side by Side -->
+        <section class="contact-section">
+            <div class="contact-info">
+                <h2>Contact Information</h2>
+                <p><strong>Rafting Adventures</strong></p>
+                <p>123 Tema River Road, Accra City</p>
+                <p>Phone: (233) 55-761-4507</p>
+                <p>Email: <a href="mailto:info@raftingadventures.com">info@raftingadventures.com</a>
+                </p>
+                <div class="map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!..." allowfullscreen
+                      loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                </div>
+            </div>
+
+            <div class="contact-form">
+                <h2>Send Us a Message</h2>
+                <form>
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required><br>
+                    <br>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required><br>
+
+                    <fieldset>
+                        <legend>Purpose of Message:</legend>
+                        <label for="general">
+                            <input type="radio" id="general" name="purpose" value="General Inquiry">
+                            General Inquiry
+                        </label>
+                        <label for="reservation">
+                            <input type="radio" id="reservation" name="purpose"
+                              value="Reservation Question"> Reservation Question
+                        </label>
+                        <label for="suggestion">
+                            <input type="radio" id="suggestion" name="purpose"
+                              value="Website Suggestion"> Website Suggestion
+                        </label>
+                    </fieldset>
+
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" rows="2"></textarea>
+
+                    <label for="newsletter">
+                        <input type="checkbox" id="newsletter" name="newsletter"> Please subscribe
+                        me to the monthly newsletter
+                    </label>
+
+                    <button type="submit">Send Message</button>
+                </form>
+            </div>
         </section>
 
-        <!-- Contact Form -->
-        <section class="contact-form">
-            <h2>Send Us a Message</h2>
-            <form>
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-
-                <fieldset>
-                    <legend>Purpose of Message:</legend>
-                    <label><input type="radio" name="purpose" value="general"> General
-                        Inquiry</label>
-                    <label><input type="radio" name="purpose" value="reservation"> Reservation
-                        Question</label>
-                    <label><input type="radio" name="purpose" value="suggestion"> Website
-                        Suggestion</label>
-                </fieldset>
-
-                <label for="message">Message:</label>
-                <textarea id="message" name="message"></textarea>
-
-                <label>
-                    <input type="checkbox" name="newsletter"> Please subscribe me to the monthly
-                    newsletter
-                </label>
-
-                <button type="submit">Send Message</button>
-            </form>
+        <!-- Team Profiles -->
+        <section class="team">
+            <h2>We Are Here to Serve You</h2>
+            <div class="profiles">
+                <figure>
+                    <img src="images/happy.jpg" width="200" alt="Seth - Lead Guide">
+                    <figcaption>Seth – Lead Guide</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure 2.jpg" width="200"
+                      alt="Myckell – Safety Coordinator">
+                    <figcaption>Myckell – Safety Coordinator</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure 3.jpg" width="200" alt="Osei – Reservations Manager">
+                    <figcaption>Osei – Reservations Manager</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
 
-    <!-- Footer -->
     <footer>
         <p>&copy; 2026 Rafting Adventures | Designed by Seth</p>
-        <div class="social-links">
-            <a href="https://www.facebook.com" target="_blank">
-                <img src="images/facebook.jpg" alt="Facebook Logo">
-            </a>
-            <a href="https://www.linkedin.com" target="_blank">
-                <img src="images/linkedin.jpg" alt="LinkedIn Logo">
-            </a>
-            <a href="https://www.instagram.com" target="_blank">
-                <img src="images/instagram.jpg" alt="Instagram Logo">
-            </a>
-        </div>
+        <nav class="socialmedia">
+            <a href="#"><img src="images/facebook.jpg" alt="Facebook Page"></a>
+            <a href="#"><img src="images/linkedin.jpg" alt="LinkedIn Page"></a>
+            <a href="#"><img src="images/instagram.jpg" alt="Instagram Page"></a>
+        </nav>
     </footer>
 </body>
 
